# veilframe

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  wsgi.py
.devcontainer/: devcontainer.json
docs/: invisible_unicode.md  twitter-encoding.md
engine/: __init__.py  color_spaces.py  decode_registry.py  decoder.py  encoder.py  option_decoders.py  tooling.py
engine/analyzers/: __init__.py  advanced_lsb.py  binwalk.py  invisible_unicode.py  plane_carver.py  randomizer_decode.py  simple_lsb.py  simple_zlib.py  stegg.py  steghide.py  tool_suite.py  xor_flag_sweep.py  zero_width.py  zsteg.py
engine/analyzers/resources/: stegbreak_rules.ini  stegbreak_wordlist.txt
references/: invisible_unicode_table.json  invisible_unicode_table.txt
references/ste_gg/: index.html
scripts/: generate_decode_fixtures.py  generate_invisible_unicode_table.py  smoke.py
static/: app.js  style.css
templates/: index.html
tests/: test_decode_options.py  test_decode_registry.py  test_invisible_unicode.py
